fix deleteKara in mobile too small

--- a/frontend/src/styles/public.scss
+++ b/frontend/src/styles/public.scss
@@ -191,7 +191,7 @@
         .toastMessage {
             top: 3px;
         }
-        .fullLyrics, .showVideo, .makeFav, .moreInfo {
+        .fullLyrics, .showVideo, .makeFav, .deleteKara, .moreInfo {
             width: 46px;
             height: 46px;
             font-size: 18px;
